@@ -1,3 +1,8 @@
+2007-04-23  Eitan Isaacson  <eitan@ascender.com>
+
+	* src/lib/accerciser/tools.py: Removed obsolete constants and
+	import line (bug 432423).
+	
 2007-04-19  Eitan Isaacson  <eitan@ascender.com>
 
 	* plugins/Makefile.am: Added script_recorder.glade.
